:wrench: Fix lh on mobile.

--- a/client/src/app/components/newsFeed/_newsFeed.scss
+++ b/client/src/app/components/newsFeed/_newsFeed.scss
@@ -11,6 +11,12 @@ $link-color-active: #111;
   list-style: none;
   margin: 0;
 
+  &__title {
+    @include only-screen(414px) {
+      line-height: 32px;
+    }
+  }
+
   &__item {
     border-bottom: 1px solid $border-color;
     margin-bottom: 84px;
