--- a/news/static/css/main-page.css
+++ b/news/static/css/main-page.css
@@ -155,6 +155,9 @@
 .news-list {
   list-style: none;
   margin: 0; }
+  @media only screen and (max-width: 414px) {
+    .news-list__title {
+      line-height: 32px; } }
   .news-list__item {
     border-bottom: 1px solid #c7c7c7;
     margin-bottom: 84px;
